<resources>
    <string name="app_name" translatable="false">SocApp</string>
    <string name="e_mail">E-mail</string>
    <string name="LoginButton">Войти</string>
    <string name="Пароль">Пароль</string>
    <string name="Регистрация">Зарегистрироваться</string>
    <string name="LogInErr">Неверный логин или пароль</string>
    <string name="UsrName">Имя</string>
    <string name="Age">Возраст</string>
    <string-array name="Gen">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="RegBtn">Зарегистрироваться</string>
</resources>
